examples/schema/generated/SchemaParser.py
# Generated from Schema.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SchemaParser ( Parser ):

    grammarFileName = "Schema.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'message'", "'enum'", "'int'", "'string'", 
                     "'bool'", "'{'", "'}'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "MESSAGE", "ENUM", "INT", "STRING", "BOOL", 
                      "LBRACE", "RBRACE", "SEMI", "COMMA", "ID", "WS", "COMMENT" ]

    RULE_schema = 0
    RULE_definition = 1
    RULE_messageDef = 2
    RULE_field = 3
    RULE_fieldType = 4
    RULE_enumDef = 5

    ruleNames =  [ "schema", "definition", "messageDef", "field", "fieldType", 
                   "enumDef" ]

    EOF = Token.EOF
    MESSAGE=1
    ENUM=2
    INT=3
    STRING=4
    BOOL=5
    LBRACE=6
    RBRACE=7
    SEMI=8
    COMMA=9
    ID=10
    WS=11
    COMMENT=12

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SchemaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SchemaParser.EOF, 0)

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SchemaParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(SchemaParser.DefinitionContext,i)


        def getRuleIndex(self):
            return SchemaParser.RULE_schema

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSchema" ):
                listener.enterSchema(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSchema" ):
                listener.exitSchema(self)




    def schema(self):

        localctx = SchemaParser.SchemaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_schema)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==2:
                self.state = 12
                self.definition()
                self.state = 17
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 18
            self.match(SchemaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def messageDef(self):
            return self.getTypedRuleContext(SchemaParser.MessageDefContext,0)


        def enumDef(self):
            return self.getTypedRuleContext(SchemaParser.EnumDefContext,0)


        def getRuleIndex(self):
            return SchemaParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)




    def definition(self):

        localctx = SchemaParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        try:
            self.state = 22
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 20
                self.messageDef()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 21
                self.enumDef()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MessageDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MESSAGE(self):
            return self.getToken(SchemaParser.MESSAGE, 0)

        def ID(self):
            return self.getToken(SchemaParser.ID, 0)

        def LBRACE(self):
            return self.getToken(SchemaParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SchemaParser.RBRACE, 0)

        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SchemaParser.FieldContext)
            else:
                return self.getTypedRuleContext(SchemaParser.FieldContext,i)


        def getRuleIndex(self):
            return SchemaParser.RULE_messageDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMessageDef" ):
                listener.enterMessageDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMessageDef" ):
                listener.exitMessageDef(self)




    def messageDef(self):

        localctx = SchemaParser.MessageDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_messageDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(SchemaParser.MESSAGE)
            self.state = 25
            self.match(SchemaParser.ID)
            self.state = 26
            self.match(SchemaParser.LBRACE)
            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1080) != 0):
                self.state = 27
                self.field()
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 33
            self.match(SchemaParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fieldType(self):
            return self.getTypedRuleContext(SchemaParser.FieldTypeContext,0)


        def ID(self):
            return self.getToken(SchemaParser.ID, 0)

        def SEMI(self):
            return self.getToken(SchemaParser.SEMI, 0)

        def getRuleIndex(self):
            return SchemaParser.RULE_field

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField" ):
                listener.enterField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField" ):
                listener.exitField(self)




    def field(self):

        localctx = SchemaParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.fieldType()
            self.state = 36
            self.match(SchemaParser.ID)
            self.state = 37
            self.match(SchemaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SchemaParser.INT, 0)

        def STRING(self):
            return self.getToken(SchemaParser.STRING, 0)

        def BOOL(self):
            return self.getToken(SchemaParser.BOOL, 0)

        def ID(self):
            return self.getToken(SchemaParser.ID, 0)

        def getRuleIndex(self):
            return SchemaParser.RULE_fieldType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldType" ):
                listener.enterFieldType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldType" ):
                listener.exitFieldType(self)




    def fieldType(self):

        localctx = SchemaParser.FieldTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fieldType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1080) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENUM(self):
            return self.getToken(SchemaParser.ENUM, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SchemaParser.ID)
            else:
                return self.getToken(SchemaParser.ID, i)

        def LBRACE(self):
            return self.getToken(SchemaParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SchemaParser.RBRACE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SchemaParser.COMMA)
            else:
                return self.getToken(SchemaParser.COMMA, i)

        def getRuleIndex(self):
            return SchemaParser.RULE_enumDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumDef" ):
                listener.enterEnumDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumDef" ):
                listener.exitEnumDef(self)




    def enumDef(self):

        localctx = SchemaParser.EnumDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_enumDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(SchemaParser.ENUM)
            self.state = 42
            self.match(SchemaParser.ID)
            self.state = 43
            self.match(SchemaParser.LBRACE)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 44
                self.match(SchemaParser.ID)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==9:
                    self.state = 45
                    self.match(SchemaParser.COMMA)
                    self.state = 46
                    self.match(SchemaParser.ID)
                    self.state = 51
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 54
            self.match(SchemaParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





